--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -101,10 +101,10 @@ stages:
       name: 'RunTerraform'
       displayName: 'Run Terraform'
       env:
-        ARM_CLIENT_ID: $(ARM_CLIENT_ID)
-        ARM_CLIENT_SECRET: $(ARM_CLIENT_SECRET)
-        ARM_TENANT_ID: $(ARM_TENANT_ID)
-        ARM_SUBSCRIPTION_ID: $(ARM_SUBSCRIPTION_ID)
+        ARM_CLIENT_ID: $(ARMCLIENTID)
+        ARM_CLIENT_SECRET: $(ARMCLIENTSECRET)
+        ARM_TENANT_ID: $(ARMTENANTID)
+        ARM_SUBSCRIPTION_ID: $(ARMSUBSCRIPTIONID)
   - deployment: Deploy
     dependsOn: Provision
     variables:
